# goit-pythonweb-hw-12

./: .coverage  .gitignore  Dockerfile  create_db.py  docker-compose.yml  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
migrations/: env.py
migrations/versions/: 2ddbd19afd39_make_users_table.py  382be5670c12_add_users_role.py  728b6a127f5e_init.py  7a9dd5ea403f_fix_contacts_unique_constraints.py  84e06c40fe1e_make_last_name_nullable.py  b8e47361c5b6_add_create_at_in_users_table.py  c5e6d44e20a3_fix_users_role.py
src/: schemas.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  upload_file.py  users.py
src/services/templates/: reset_password.html
tests/: conftest.py
tests/integration/: test_integration_auth.py  test_integration_contacts.py  test_integration_users.py  test_integration_utils.py
tests/unit/conf/: test_unit_conf.py
tests/unit/database/: test_unit_db.py
tests/unit/repository/: test_unit_contacts.py  test_unit_users.py
tests/unit/services/: test_unit_auth.py  test_unit_email.py  test_unit_upload_file.py
